--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/prjinfox.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\Luis Fellipe\\Downloads\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49-bin.jar
+file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\Luis Fellipe\\Downloads\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=br.com.infox.telas.TelaLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
